--- a/mongodb-cluster/Vagrantfile
+++ b/mongodb-cluster/Vagrantfile
@@ -1,70 +1,52 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
 
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "base"
+  (1..2).each do |i|
+    config.vm.define "mongo_config_#{i}" do |node|
+      node.vm.hostname = "mongo-config-#{i}"
+      node.vm.box = "bento/ubuntu-18.04"
+      node.vm.network "private_network", ip: "192.168.115.#{i+1}"
 
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
+      node.vm.provider "virtualbox" do |vb|
+        vb.name = "mongo-config-#{i}"
+        vb.gui = false
+        vb.memory = "512"
+      end
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
+      node.vm.provision "shell", path: "bash/mongo_config_#{i}.sh", privileged: false
+    end
+  end
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine and only allow access
-  # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+  config.vm.define "mongo_query_router" do |mongo_query_router|
+    mongo_query_router.vm.hostname = "mongo-query-router"
+    mongo_query_router.vm.box = "bento/ubuntu-18.04"
+    mongo_query_router.vm.network "private_network", ip: "192.168.115.4"
+    
+    mongo_query_router.vm.provider "virtualbox" do |vb|
+      vb.name = "mongo-query-router"
+      vb.gui = false
+      vb.memory = "512"
+    end
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+    mongo_query_router.vm.provision "shell", path: "bash/mongo_router.sh", privileged: false
+  end
 
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
+  (1..3).each do |i|
+    config.vm.define "mongo_shard_#{i}" do |node|
+    node.vm.hostname = "mongo-shard-#{i}"
+    node.vm.box = "bento/ubuntu-18.04"
+    node.vm.network "private_network", ip: "192.168.115.#{4+i}"
+        
+    node.vm.provider "virtualbox" do |vb|
+      vb.name = "mongo-shard-#{i}"
+      vb.gui = false
+      vb.memory = "512"
+    end
 
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
+    node.vm.provision "shell", path: "bash/mongo_shard_#{i}.sh", privileged: false
+    end
+  end
 
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
-  #
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
 end
