--- a/mongodb-cluster/Vagrantfile
+++ b/mongodb-cluster/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure("2") do |config|
         vb.memory = "512"
       end
 
-      node.vm.provision "shell", path: "bash/mongo_config_#{i}.sh", privileged: false
+      node.vm.provision "shell", path: "bash/mongo_config#{i}.sh", privileged: false
     end
   end
 
@@ -45,7 +45,7 @@ Vagrant.configure("2") do |config|
       vb.memory = "512"
     end
 
-    node.vm.provision "shell", path: "bash/mongo_shard_#{i}.sh", privileged: false
+    node.vm.provision "shell", path: "bash/mongo_shard#{i}.sh", privileged: false
     end
   end
 
